--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -1,4 +1,13 @@
-.container-form{
-  background-image: url(img/cons.jpg);
-  background-size: cover;
+.scroll::-webkit-scrollbar{
+  height: 0.6rem;
+  width: 7px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: #374151; 
+  border-radius: 1rem;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #6B7280; 
 }
